--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <h1 class="display-3">Start here</h1>
+    <h1 class="display-3">Start Here</h1>
 
     <!--Bootstrap JS scripts-->
     <script
@@ -29,6 +29,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
+
     ></script>
   </body>
 </html>
