--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <h1 class="display-3">Start Here</h1>
+    <h1 class="display-3">Fresh</h1>
 
     <!--Bootstrap JS scripts-->
     <script
